# python-package-template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.__package_name_kebab_case }}/: .editorconfig  .gitignore  Dockerfile-base  Dockerfile-cuda  Dockerfile-test  README.md  mkdocs.yml  pyproject.toml
{{ cookiecutter.__package_name_kebab_case }}/.devcontainer/: devcontainer.json
{{ cookiecutter.__package_name_kebab_case }}/docs/: index.md  reference.md
{{ cookiecutter.__package_name_kebab_case }}/tests/: test__example.py
{{ cookiecutter.__package_name_kebab_case }}/{{ cookiecutter.__package_name_snake_case }}/: main.py
