# https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# https://python-poetry.org/docs/pyproject/
[tool.poetry]
name = "{{ cookiecutter.__package_name_kebab_case }}"
version = "0.0.1"
description = "{{ cookiecutter.package_description }}"
authors = [
  "{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"
]
readme = "README.md"
repository = "{{ cookiecutter.package_url }}"
packages = [
  { include = "{{cookiecutter.__package_name_snake_case}}" }
]
classifiers = [
    "Programming Language :: Python :: 3",
]

# https://python-poetry.org/docs/dependency-specification/
[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

# https://python-poetry.org/docs/master/managing-dependencies/
[tool.poetry.group.dev.dependencies]  
poethepoet = "^0.20.0"
black = { version = "^23.3.0", extras = ["jupyter"] }
ruff = "^0.0.272"
isort = "^5.12.0"
pytest = "^7.3.2"
pytest-clarity = "^1.0.1"
pytest-cov = "4.1.0"
pytest-xdist = "^3.3.1"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.15"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}

# https://github.com/nat-n/poethepoet
[tool.poe.tasks]
_format = "black ."
_sort_imports = "isort ."
_lint = "ruff check --fix ."

_check_format = "black --check ."
_check_sort_imports = "isort --check ."
_check_lint = "ruff check ."

docs = "mkdocs serve"
precommit = ["_format", "_sort_imports", "_lint"]
check = ["_check_format", "_check_sort_imports", "_check_lint"]
test = "pytest"

# https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
[tool.black]
line-length = 120

# https://pycqa.github.io/isort/docs/configuration/config_files
[tool.isort]
profile = "black"

# https://docs.pytest.org/en/7.1.x/reference/customize.html
[tool.pytest.ini_options]
addopts = "--color=yes --doctest-modules  -ra --cov --cov-report=html --cov-report term --exitfirst --failed-first --strict-config --strict-markers --verbosity=2 --junitxml=python-junit.xml"
xfail_strict = true
pythonpath = ["{{ cookiecutter.__package_name_snake_case }}"]
testpaths = ["{{ cookiecutter.__package_name_snake_case }}", "tests"]
# ignore any of these paths
norecursedirs = [ ]

# https://github.com/charliermarsh/ruff
[tool.ruff]  
fix = true
ignore-init-module-imports = true
line-length = 120
src = ["{{cookiecutter.__package_name_snake_case}}", "tests"]

[tool.ruff.pycodestyle]
max-doc-length = 120

[tool.ruff.pydocstyle]
convention = "{{ cookiecutter.docstring_style|lower }}"
